# moltbook-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  example-cli-tool.yaml  example-library.yaml
src/moltbook_generator/: __init__.py  cli.py  generator.py  parsers.py  templates.py
tests/: test_templates.py
